...
    value: filter,
  }));

  return (
    <PageContainer title="Dashboard">
      <View style={styles.stack}>
        <FormGroup header="Range">
          <FormRow title="From">
            <CustomDatePicker value={fromDate} onChange={setFromDate} />
          </FormRow>
          <FormRow title="To">
            <CustomDatePicker value={toDate} onChange={setToDate} />
          </FormRow>
...
