...
  }));

  const hasSearched = searchQuery.length > 0 || selectedFilter !== FilterFood.ALL;

  return (
    <PageContainer
      title="Add food"
      titleAccessory={
        <IOSButton
          title="New food"
          variant="tinted"
          size="sm"
          icon="plus"
...
              onChange={setSelectedCategory}
              style={styles.dropdown}
            />
          ) : (
            <TextField
              search
              placeholder="Search food"
              autoCorrect={false}
              returnKeyType="search"
              value={searchQuery}
              onChangeText={setSearchQuery}
            />
          )}
...
